Various minor bugfixes and optimizations